<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team_a"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/teamH_score_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/teamA_Points"
                android:textColor="#000"
                android:textSize="56sp" />


            <Button
                android:id="@+id/teamH_addThree_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/addThree_Button" />

            <Button
                android:id="@+id/teamH_addTwo_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/addTwo_Button" />

            <Button
                android:id="@+id/teamH_FreeThrow_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/freeThrow_Button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team_b"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/teamG_score_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/teamB_Points"
                android:textColor="#000"
                android:textSize="56sp" />


            <Button
                android:id="@+id/teamG_addThree_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/addThree_Button" />

            <Button
                android:id="@+id/teamG_addTwo_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/addTwo_Button" />

            <Button
                android:id="@+id/teamG_freeThrow_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/freeThrow_Button" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/resetAll_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/rest_btn" />
</RelativeLayout>